build: fustom memory for friends
